syntax = "proto3";
import "General.proto";

option csharp_namespace = "Lightning.Core.Generated";

package Lightning;

service GrpcProjectEditService {
	rpc GetEditChangeStream(GeneralRequest) returns (stream EditChangeMessage) {}
}

message EditChangeMessage {
	string id = 1;
	int32 targetType = 2;
	string name = 3;
	oneof value {
		int32 integer = 4;
		float float = 5;
		string string = 6;
		bool boolean = 7;
	}
}
